--- a/content/posts/0.md
+++ b/content/posts/0.md
@@ -32,12 +32,8 @@ Si può dire, quindi, che nell’underground musicale reggiano ci fosse grande a
 
 Presentammo il nuovo disco al Gyno, una piccola birreria costituita da un'unica sala arredata con un bancone da bar, qualche tavolo e un grande palco sul quale si esibivano una o due sere a settimana band rock reggiane, Italiane e talvolta anche straniere. Quella sera, l'ampio parcheggio antistante al locale era invaso dalle automobili e fummo costretti a parcheggiare altrove, il locale stipato di avventori oltre le nostre più rosee aspettative.
 
-Fu probabilmente uno dei nostri migliori concerti, non ricordo come suonammo (probabilmente tutti i brani con bpm incrementati dalla carica e l'esaltazione del momento) ma il pubblico rispose alla grande, i nostri affezionati punk pogarono sotto, ma soprattutto sopra al palco, tanto che Frank, il roadie che ci ha sempre accompagnato ad ogni live, fu costretto a piazzarsi sul palco per mitigare le invasioni dei punk (vedi foto seguente). 
+Fu probabilmente uno dei nostri migliori concerti, non ricordo come suonammo, probabilmente tutti i brani con bpm incrementati dalla carica e l'esaltazione del momento, il pubblico rispose alla grande, i nostri affezionati punk pogarono sotto, ma soprattutto sopra al palco, tanto che Frank, il roadie che ci ha sempre accompagnato ad ogni live, fu costretto a piazzarsi sul palco per mitigare le invasioni dei punk (vedi foto seguente). 
 
 ![Presentazione di Dancing al Gyno](/img/gyno/gyno3.jpg)
 
-Quella sera le vendite di *Dancing le Cibaou-Cibaou*, per quanto notevoli, non ci permisero di aumentare le nostre finanze, ma permisero di coprire buona parte degli investimenti anticipati dalla piccola etichetta che produsse il nostro primo disco: la Asbury Park Records. Il live al Gyno e le vendite del disco contribuirono a farci conoscere sempre di più ma soprattutto, ci portarono in uno stato di personale esaltazione emotiva che fu uno stimolo per produrre nuove canzoni.
-
-
-
-
+Quella sera le vendite di *Dancing le Cibaou-Cibaou*, per quanto notevoli, non ci permisero di aumentare le nostre finanze, ma permisero di coprire buona parte degli investimenti della piccola etichetta che produsse il nostro primo disco: la Asbury Park Records. Il live al Gyno e le vendite del disco contribuirono a farci conoscere sempre di più nell'ambito musicale reggiano ma soprattutto, ci portarono in uno stato di personale esaltazione emotiva che fu uno stimolo per produrre nuove canzoni.
