--- a/content/posts/0.md
+++ b/content/posts/0.md
@@ -30,10 +30,9 @@ Si può dire, quindi, che nell’underground musicale reggiano ci fosse grande a
 
 ![Presentazione di Dancing al Gyno](/img/gyno/gyno2.jpg)
 
-Presentammo il nuovo disco al Gyno, una piccola birreria costituita da un'unica sala arredata con un bancone da bar, qualche tavolo e un grande palco sul quale si esibivano una o due sere a settimana band rock reggiane, Italiane e talvolta anche straniere. Quella sera, l'ampio parcheggio antistante al locale era invaso dalle automobili e fummo costretti a parcheggiare altrove, il locale stipato di avventori oltre le nostre più rosee aspettative.
+Presentammo il nuovo disco al Gyno, una piccola birreria con un’unica sala arredata con un bancone da bar, qualche tavolo e un grande palco, dove si esibivano una o due sere a settimana band rock reggiane, italiane e talvolta anche straniere. Quella sera, il parcheggio antistante era così pieno di auto che dovemmo trovare posto altrove, mentre all’interno il locale era stipato di gente ben oltre le nostre aspettative.
 
-Fu probabilmente uno dei nostri migliori concerti, non ricordo come suonammo, probabilmente tutti i brani con bpm incrementati dalla carica e l'esaltazione del momento, il pubblico rispose alla grande, i nostri affezionati punk pogarono sotto, ma soprattutto sopra al palco, tanto che Frank, il roadie che ci ha sempre accompagnato ad ogni live, fu costretto a piazzarsi sul palco per mitigare le invasioni dei punk (vedi foto seguente). 
-
+Fu probabilmente uno dei nostri migliori concerti. Non ricordo con esattezza come suonammo, ma di certo l’adrenalina e l’euforia del momento ci fecero aumentare i bpm di ogni brano. Il pubblico rispose alla grande: i nostri fedelissimi punk non solo pogavano sotto il palco, ma spesso anche sopra. A un certo punto, Frank, il nostro fidato roadie, fu costretto a piazzarsi sul palco per contenere le invasioni (vedi foto seguente).
 ![Presentazione di Dancing al Gyno](/img/gyno/gyno3.jpg)
 
-Quella sera le vendite di *Dancing le Cibaou-Cibaou*, per quanto notevoli, non ci permisero di aumentare le nostre finanze, ma permisero di coprire buona parte degli investimenti della piccola etichetta che produsse il nostro primo disco: la Asbury Park Records. Il live al Gyno e le vendite del disco contribuirono a farci conoscere sempre di più nell'ambito musicale reggiano ma soprattutto, ci portarono in uno stato di personale esaltazione emotiva che fu uno stimolo per produrre nuove canzoni.
+Quella sera, le vendite di Dancing le Cibaou-Cibaou, pur notevoli, non fecero schizzare le nostre finanze, ma permisero di coprire buona parte degli investimenti della piccola etichetta che aveva prodotto il nostro primo disco: la Asbury Park Records. Il live al Gyno e il successo del disco contribuirono a farci conoscere sempre di più nell’ambiente musicale reggiano, ma soprattutto ci portarono in uno stato di esaltazione emotiva che divenne la scintilla per scrivere nuove canzoni.
