Prove su immagini

--- a/content/posts/0.md
+++ b/content/posts/0.md
@@ -36,3 +36,5 @@ Fu probabilmente uno dei nostri migliori concerti. Non ricordo con esattezza com
 ![Presentazione di Dancing al Gyno](/img/gyno/gyno3.jpg)
 
 Quella sera, le vendite di Dancing le Cibaou-Cibaou, pur notevoli, non fecero schizzare le nostre finanze, ma permisero di coprire buona parte degli investimenti della piccola etichetta che aveva prodotto il nostro primo disco: la Asbury Park Records. Il live al Gyno e il successo del disco contribuirono a farci conoscere sempre di più nell’ambiente musicale reggiano, ma soprattutto ci portarono in uno stato di esaltazione emotiva che divenne la scintilla per scrivere nuove canzoni.
+
+![Presentazione di Dancing al Gyno](/img/gyno/gyno1.jpg)
