--- a/content/posts/19970607-gyno.md
+++ b/content/posts/19970607-gyno.md
@@ -18,7 +18,7 @@ tags:
 draft: false
 ---
 
-In un fumoso locale reggiano, una sera di giugno del 1997, si ballò il Cibaou-Cibaou.
+In un fumoso locale reggiano chiamato Gyno, una sera di giugno del 1997, si ballò il Cibaou-Cibaou e noi fummo felici.
 
 <!--more-->
 
