Abbozzo di scaletta covo

--- a/content/posts/19940129-covo.md
+++ b/content/posts/19940129-covo.md
@@ -35,3 +35,8 @@ Suonammo davanti a quattro gatti: Scanna con sua moglie Ninfa (anche lei musicis
 Suonando, mi ferii leggermente un dito della mano destra. Continuai a suonare senza badarci, ma la ferita, per qualche motivo, sanguinava copiosamente. Schizzi di sangue ricoprirono il battipenna della mia Telecaster. Questa scena splatter diede una scarica di adrenalina agli unici due spettatori davvero interessati alla nostra musica: Scanna e Ninfa, esaltati sotto al palco da quel momento horror.
 
 Portammo a casa il nostro primo concerto. Non fu un successo, non suonammo bene, ma in qualche modo... da lì partimmo.
+ 
+> ## Scaletta del concerto
+>
+> - 0:00 - 2:21 [Momento di delirio]
+> - 2:21 - 
