--- a/content/posts/19970607-gyno.md
+++ b/content/posts/19970607-gyno.md
@@ -2,7 +2,7 @@
 title: Dancing at the Gyno
 date: 1997-06-07T08:04:06+01:00
 lastmod: 2025-02-20T08:04:06+01:00
-author: Ninja
+author: Max
 avatar: /img/ninja.png
 # authorlink: https://author.site
 cover: /img/gyno/gyno3.jpg
