Bozza di scaletta covo

--- a/content/posts/19940129-covo.md
+++ b/content/posts/19940129-covo.md
@@ -38,5 +38,8 @@ Portammo a casa il nostro primo concerto. Non fu un successo, non suonammo bene,
  
 > ## Scaletta del concerto
 >
-> - 0:00 - 2:21 [Momento di delirio]
-> - 2:21 - 
+> - [Momento di delirio]
+> - 2:21 -
+> - Sweet little 16
+> - Tommy
+> - She doesn't say goodbye (early version)
