--- a/content/posts/19940129-covo.md
+++ b/content/posts/19940129-covo.md
@@ -19,18 +19,17 @@ draft: false
 Dopo aver inciso cinque canzoni su un demo, ottenemmo il nostro primo ingaggio al Covo di Bologna, facendo credere di essere una band navigata nella scena musicale emiliana. In realtà, avevamo solo cinque brani e nessun concerto all'attivo.
 <!--more-->
 
-VIDEO DA SOSTITUIRE
-{{< youtube id="FQu_T6pn3_c" >}}
+{{< youtube id="pXyLX6P1v5s" >}}
 
 Con poche sessioni in sala prove, fummo pronti per registrare il nostro primo demo tape che, qualche giorno dopo, prese il titolo di *Very Clean*. Non ricordo molto delle registrazioni (naturalmente incise su musicassetta), se non una serata surreale nella quale registrammo alcune voci usando un 4 piste Tascam.
 
 A quei tempi, un demo era indispensabile per iniziare: la chiave per aprire le porte dei locali, l'ascensore per salire sul palco. Ci prendete a suonare? Avete un demo? No. Fatemi avere un demo e vedo se posso fissarvi una serata. Niente demo, niente concerto. Ora il demo lo avevamo, con una copertina a colori fiammanti, fotocopiata alla Red di Scandiano: il Chrysler Building preso da un libro e fotocopiato con i colori invertiti, il massimo della tecnologia! I titoli erano realizzati con un quaderno di lettere ritagliate, incollate e poi fotocopiate.
 
-Portammo il demo a Scanna, il selezionatore musicale del Covo di Bologna. Musicista anche lui, un uomo che – come disse lui stesso – aveva un orologio fermo al 1962. Concerto fissato: sabato 29 gennaio 1994 dopo un gruppo bolognese. Dovevamo suonare un'ora ma avevamo solo 5 pezzi, mai suonato dal vivo con i Radiostars, mai cantato dal vivo in vita mia.
+Portammo il demo a Scanna, il selezionatore musicale del Covo di Bologna. Musicista anche lui, un uomo che – come disse lui stesso – aveva un orologio fermo al 1962. Concerto fissato: sabato 29 gennaio 1994 dopo un gruppo bolognese. Dovevamo suonare un'ora ma avevamo solo 5 pezzi. Mai suonato dal vivo con i Radiostars. Mai cantato dal vivo in vita mia.
 
-Prima di noi si esibì una band bolognese con cinque o sei elementi e un seguito enorme di amici. Durante il cambio palco, il loro pubblico si dileguò, lasciandoci soli con i primi accordi.
+Prima di noi si esibì la band bolognese composta da cinque e un seguito enorme di amici, parenti e fidanzate. Durante il cambio palco, il loro pubblico si dileguò, lasciandoci soli con i primi accordi.
 
-Suonammo davanti a quattro gatti: Scanna con sua moglie Ninfa (anche lei musicista), Frank, il nostro roadie, e pochi altri ben nascosti negli angoli più bui del locale. I 43 minuti di concerto furono riempiti con momenti deliranti, improvvisazioni impossibili, una cover dei Cure *10:15 Saturday Night* e tanto, tanto feedback.
+Suonammo davanti a quattro gatti: Scanna con sua moglie Ninfa (anche lei musicista), Frank, il nostro roadie, e pochi altri ben nascosti negli angoli bui del locale. I 43 minuti di concerto furono riempiti con momenti deliranti, improvvisazioni impossibili, una cover dei Cure *10:15 Saturday Night* e tanto, tanto feedback. Che delirio.
 
 Suonando, mi ferii leggermente un dito della mano destra. Continuai a suonare senza badarci, ma la ferita, per qualche motivo, sanguinava copiosamente. Schizzi di sangue ricoprirono il battipenna della mia Telecaster. Questa scena splatter diede una scarica di adrenalina agli unici due spettatori davvero interessati alla nostra musica: Scanna e Ninfa, esaltati sotto al palco da quel momento horror.
 
