Sistemato post Covo

--- a/content/posts/19940129-covo.md
+++ b/content/posts/19940129-covo.md
@@ -16,12 +16,14 @@ tags:
 draft: false
 ---
 
-Dopo aver inciso cinque canzoni su un demo, ottenemmo il nostro primo ingaggio al Covo di Bologna, facendo credere di essere una band navigata nella scena musicale emiliana. In realtà, avevamo solo cinque brani e nessun concerto all'attivo.
+Dopo aver inciso cinque canzoni su un demo, ottenemmo il nostro primo ingaggio al Covo di Bologna, facendo credere di essere una band navigata nella scena musicale emiliana, ma avevamo solo una decina di brani e nessun concerto all'attivo.
 <!--more-->
 
 {{< youtube id="pXyLX6P1v5s" >}}
 
 Con poche sessioni in sala prove, fummo pronti per registrare il nostro primo demo tape che, qualche giorno dopo, prese il titolo di *Very Clean*. Non ricordo molto delle registrazioni (naturalmente incise su musicassetta), se non una serata surreale nella quale registrammo alcune voci usando un 4 piste Tascam.
+
+![Demo tape cover](/img/veryclean/veryclean.png)
 
 A quei tempi, un demo era indispensabile per iniziare: la chiave per aprire le porte dei locali, l'ascensore per salire sul palco. Ci prendete a suonare? Avete un demo? No. Fatemi avere un demo e vedo se posso fissarvi una serata. Niente demo, niente concerto. Ora il demo lo avevamo, con una copertina a colori fiammanti, fotocopiata alla Red di Scandiano: il Chrysler Building preso da un libro e fotocopiato con i colori invertiti, il massimo della tecnologia! I titoli erano realizzati con un quaderno di lettere ritagliate, incollate e poi fotocopiate.
 
@@ -42,3 +44,8 @@ Portammo a casa il nostro primo concerto. Non fu un successo, non suonammo bene,
 > - Sweet little 16
 > - Tommy
 > - She doesn't say goodbye (early version)
+> - Her own things
+> - [Momento delirio]
+> - Hide and Seek
+> - She was a wire
+> - Ignorance
