--- a/content/posts/19940129-covo.md
+++ b/content/posts/19940129-covo.md
@@ -29,7 +29,7 @@ A quei tempi, un demo era indispensabile per iniziare: la chiave per aprire le p
 
 Portammo il demo a Scanna, il selezionatore musicale del Covo di Bologna. Musicista anche lui, un uomo che – come disse lui stesso – aveva un orologio fermo al 1962. Concerto fissato: sabato 29 gennaio 1994 dopo un gruppo bolognese. Dovevamo suonare un'ora ma avevamo solo 5 pezzi. Mai suonato dal vivo con i Radiostars. Mai cantato dal vivo in vita mia.
 
-Prima di noi si esibì la band bolognese composta da cinque e un seguito enorme di amici, parenti e fidanzate. Durante il cambio palco, il loro pubblico si dileguò, lasciandoci soli con i primi accordi.
+Prima di noi si esibì la band bolognese composta da cinque e un seguito enorme di amici, parenti e fidanzate. Durante il cambio palco, il loro pubblico in buona parte si dileguò.
 
 Suonammo davanti a quattro gatti: Scanna con sua moglie Ninfa (anche lei musicista), Frank, il nostro roadie, e pochi altri ben nascosti negli angoli bui del locale. I 43 minuti di concerto furono riempiti con momenti deliranti, improvvisazioni impossibili, una cover dei Cure *10:15 Saturday Night* e tanto, tanto feedback. Che delirio.
 
