--- a/content/posts/19940129-covo.md
+++ b/content/posts/19940129-covo.md
@@ -49,3 +49,5 @@ Portammo a casa il nostro primo concerto. Non fu un successo, non suonammo bene,
 > - Hide and Seek
 > - She was a wire
 > - Ignorance
+> - Let's go
+> - Let's go
