--- a/content/posts/19970607-gyno.md
+++ b/content/posts/19970607-gyno.md
@@ -2,6 +2,7 @@
 title = 'Dancing at the Gyno'
 date = 2025-02-27T08:33:06+01:00
 draft = true
+tags = ['Live','Album']
 +++
 In un fumoso locale reggiano chiamato Gyno, una sera di giugno del 1997, si ballò il Cibaou-Cibaou e noi fummo felici.
 
